"jump on chicken - sound added, some code fixes"

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 780px) {
    canvas {
       width: 100%;
       border: 10px ridge brown;
