--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body {
 .container {
    display: flex;
    align-items: center;
+   flex-direction: column;
+   justify-content: center;
 }
 
 h1 {
@@ -45,7 +47,7 @@ canvas {
    background-color: black;
    border: 30px ridge brown;
    border-radius: 50px;
-   box-shadow: 0 0 15px 5px rgba(123, 75, 58, 0.7); 
+   box-shadow: 0 0 15px 5px rgba(123, 75, 58, 0.7);
    display: block;
 }
 
@@ -67,6 +69,47 @@ header img {
 /*-------------------------------------   Main Content   -------------------------------------*/
 main {
    flex: 1;
+}
+
+/* CSS für den Startbildschirm */
+.start-screen {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0, 0.8); /* Halbtransparenter Hintergrund */
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   z-index: 100; /* Über den anderen Inhalten anzeigen */
+}
+
+#start-image {
+   width: 80%; /* Passt das Bild je nach Bedarf an */
+   max-width: 700px; /* Maximale Breite */
+   margin-bottom: 20px;
+}
+
+.start-button {
+   padding: 15px 30px;
+   font-size: 18px;
+   background-color: #ffcc00;
+   border: none;
+   cursor: pointer;
+   font-family: "Arial", sans-serif;
+   border-radius: 5px;
+}
+
+.start-button:hover {
+   background-color: #e6b800;
+}
+
+.info-screen {
+   width: 100%;
+   background-color: black;
+   height: 50px;
 }
 
 /*----------------------------------------   Footer   ----------------------------------------*/
